2008-10-11  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: Fix minor output bug reported by
	Tapani Kinnunen (Fixes: #2144142)

2008-10-11  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, src/forcefields/forcefieldmmff94.cpp: Remove
	redefinition of _logbuf[BUFF_SIZE+1] (This and Chris' previous commit 
	fixes: #2150390)

	* src/forcefield.cpp: Fix OBForceField::GetAtomTypes() and
	OBForceField::GetPartialCharges()

	* src/forcefield.cpp: Check OBForceField::_validSetup flas before
	doing anything that may cause a segfault. (Fixes: #2059299)

	* src/forcefields/forcefield*.h: Set _validSetup to false in
	constructor.

	* CMakeLists.txt, src/config.h.cmake: apply patch from Christian
	Ehrlicher to fix cmake MSVC compilation.

2008-10-10  Chris Morley

	* src/fingerprints/finger3.cpp: rearrange
	a) so that div and div-- do not appear in same statement, which
	is illegal (Andrew Dalke).
	b) replace ternary conditional, which did not compile in gcc
	It's a pity the Microsoft compiler did not warn about either of these.
	
	The preferred file format no longer needs a comment as first line.

	* src/formats/chemkinformat.cpp(ReadReactionQualifierLines):
	correct error similar to b) above flagged in bug #2150390	 
	
2008-09-26  Chris Morley

	* src/formats/fastsearchformat.cpp: Improved error message when
	 target is SMARTS rather than SMILES. Bug #2129841
	 
	* src/formats/getinchi.cpp: small mod to avoid occasionally seeing
	 a "quoted" InChI when there isn't one. (There ARE none in the wild.)
	
2008-09-23  Chris Morley
	
	* src/fingerprints/finger3.cpp: enhanced PatternFP which can take
	extra parameters and file format.
	
	* data/MACCS.txt; data for new MACCS fingerprint (from RDKit)
	
	* data/plugindefines.txt; definition of MACCS fingerprint.
	
2008-07-19  Michael Banck  <mbanck@gmx.net>

	* src/formats/opendxformat.cpp: Rename theGaussianCubeFormat global
	variable to theOpenDXCubeFormat.
